--- a/app/webroot/css/screen.css
+++ b/app/webroot/css/screen.css
@@ -639,6 +639,17 @@ a:hover.action-delete	{
 	text-indent: -3000px;
 	width: 80px;
 	}
+.form-update {
+	background: url(../images/forms/btn_update.gif) no-repeat;
+	border: none;
+	cursor: pointer;
+	display: block;
+	float: left;
+	height: 30px;
+	margin-right: 15px;
+	text-indent: -3000px;
+	width: 80px;
+	}
 .form-add	{
 	background: url(../images/forms/btn_add.jpg) no-repeat;
 	border: none;
