fix bug error message using red color error message in middle
Signed-off-by: Xudong Wu <william.wu.xudong@gmail.com>

--- a/app/webroot/css/base.css
+++ b/app/webroot/css/base.css
@@ -225,6 +225,13 @@ div#content p#finishText {
 	text-align: center;
 }
 
+.error-message {
+	clear: both;
+	color: #c73e14;
+	font-weight: bold;
+	text-align: center;
+}
+
 
 /* # popup
 ---------------------------------------------------------------------------- */
