--- a/app/webroot/css/screen.css
+++ b/app/webroot/css/screen.css
@@ -395,6 +395,17 @@ td.checkbox-width	{
 	margin: 0 0 0 10px;
 	padding: 0 10px 0 0;
 	}
+.table-header-options span,
+ .table-header-repeat span	{
+	color: #fff;
+	font-family: Tahoma;
+	font-size: 13px;
+	font-weight: bold;
+	line-height: 14px;
+	margin: 0 0 0 10px;
+	padding: 0 10px 0 0;
+	}
+
 	
 	.table-header-options a:hover,
  .table-header-repeat a:hover	{
